fixed spacing back button

--- a/src/app/pages/projects/project-base.component.scss
+++ b/src/app/pages/projects/project-base.component.scss
@@ -34,7 +34,7 @@ button {
 
 @media screen and (min-width: 450px) {
   .hide-if-big {
-    height: 20vh; 
+    height: 12vh; 
     overflow-y: scroll;
   }
 
